Instructions when downloading project.