@@ -7,4 +7,8 @@ CSC 336 Project 1: Peter, Daniel, Julia and Henry
 - Any javafx-sdk library that is at least version 11. 
 - Any sqlite-jdbc library. i.e. ```sqlite-jdbc-3.30.1 ```
 
-#### When prompted, be sure to include the XML files in Git, if you are using IntelliJ.
+#### If you are having issues with your modules, follow these steps:
+- Go to "Run" tab.
+- Click on "Edit Configurations".
+- In VM Options, type in: "--module-path "C:\Users\'your path'\javafx-sdk-14\lib" --add-modules=javafx.controls,javafx.fxml,javafx.graphics"
+- Click 'Apply' and 'Ok'.
